--- a/views/404.html
+++ b/views/404.html
@@ -55,6 +55,15 @@
 </head>
 
 <body>
-  <h1>Page not found!</h1>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Page Not Found!</h1>
 </body>
+
 </html>
