--- a/views/add-product.html
+++ b/views/add-product.html
@@ -92,20 +92,25 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/">Shop</a></li>
-        <li><a href="/add-product">Add Product</a></li>
-      </ul>
-    </nav>
+  <header class="main-header">
+      <nav class="main-header__nav">
+          <ul class="main-header__item-list">
+              <li class="main-header__item"><a href="/">Shop</a></li>
+              <li class="main-header__item"><a class="active" href="/admin/add-product">Add Product</a></li>
+          </ul>
+      </nav>
   </header>
 
   <main>
-    <form action="/admin/add-product" method="POST">
-      <input type="text" name="title">
-      <button type="submit">Add Product</button>
-    </form>
+      <form class="product-form" action="/admin/add-product" method="POST">
+          <div class="form-control">
+              <label for="title">Title</label>
+              <input type="text" name="title" id="title">
+          </div>
+
+          <button type="submit">Add Product</button>
+      </form>
   </main>
 </body>
+
 </html>
