--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,8 +11,6 @@
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
           </div>
-          <form action="/cart" method="post">
-            <button class="btn" type="submit">Add to Cart</button>
-          </form>
+          <%- include('../includes/add-to-cart.ejs') %>
         </main>
         <%- include('../includes/end.ejs') %>
